--- a/_posts/2023-12-31-2023.markdown
+++ b/_posts/2023-12-31-2023.markdown
@@ -24,11 +24,11 @@ tags:
 
 妈的……我没有一点准备！没有尿垫，没有狗粮，最重要的是，没有狗笼子！犯了很多错，比如，不知道可乐那时才40天不到，刚回家就拉去浴室给它洗了澡；比如，试图直接把它放在楼下屋外的围栏里，结果那天下雷阵雨，害得没断奶的小狗在我楼下哭了半宿；还比如，我冒雨把它接到我房间，被迫、无奈地每天在房间地上擦屎擦尿擦了快一周……想想都是泪，不管是我还是可乐都应当为此掬一捧泪。能把它养成现在这么健壮，它和我都不容易……
 
-![](../img/in-post/post-1-huiwang/kele-mix.jpg)
+![](/img/in-post/post-1-huiwang/post-kele-mix.jpg)
 
 直到它三个月前，我都实在太累了。白天收拾狗窝，照顾狗，晚上写材料，然后看养狗训狗科普视频到凌晨三点才睡，次日再爬起来喂它，日复一日……我的身体也在每天这样的折磨中，被迫好了起来……从一开始喘着气爬楼和收拾狗窝，变得慢慢遛狗好像也没问题。我的精神状态也有变好，嗯，从一开始跟我妈吵架崩溃尖叫大吼，半夜把狗拎出来自己钻进狗笼子，并且把狗笼子坐得下弯无法复原（。），到现在人淡如菊平静得不得了（是吗），真是成长了许多……（插播一条，刚想起来，tmd它五个月之前我都被它puppy bite到失心疯，我居然忘了!!! 难以置信！）
 
-![](../img/in-post/post-1-huiwang/kele-mix2.jpg)
+![](/img/in-post/post-1-huiwang/post-kele-mix2.jpg)
 
 当然此处，也格外需要感谢传说中的学长。他启发我想通了一件事。我很擅长在面对他人时用节能模式，万事只要用“关你屁事”、“关我屁事”、“尊重祝福”这三板斧就好，但面对家人的时候总是无法用同等心态对待。然后我突然意识到，家人的人生是家人的人生，我的人生是我的人生。这句话虽然说起来简单，我却在今年才真正深刻体会。因而，我的家人也应当是我“尊重祝福”的群体的一部分。别太把家人当回事，家人说的伤人话是过耳风，家人执拗做出的选择是他们命运注定，一切与我有关，却并不必然强相关。那之后，我就能平静对待与我妈相处中的种种矛盾了。
 
